<resources>
    <string name="app_name">projectFoodpedia</string>
    <string name="foodDetailsContent">
        Nasi goreng adalah satu di antara pilihan masakan tercepat yang bisa dilakukan para ibu rumah tangga saat buru-buru hendak membuatkan masakan untuk keluarganya. Tak heran jika cara membuat nasi goreng sederhana ini menjadi pilihan para wanita karier untuk sarapan karena kemudahannya.
    </string>
    <string name="favorite">Favorite</string>
    <string name="beranda">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="profil_akun">Profil Akun</string>
    <string name="resep_favorit">Resep Favorit</string>
    <string name="rating_menu">Rating dan Ulasan</string>
    <string name="panduan_pengguna">Panduan Pengguna</string>
    <string name="about">Tentang FoodPedia</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="password_hint">Masukkan kata sandi-mu</string>
    <string name="email_hint">Contoh : gordonramsay70@gmail.com</string>
    <string name="fullname_hint">Isikan nama lengkapmu</string>
</resources>