<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/autentikasibg"
    tools:context=".Signup">

    <TextView
        android:id="@+id/tv_signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cari Resep\nTerbaik Untuk\nMasakanmu"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:fontFamily="@font/barlow_bold"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:lineHeight="50dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="420dp"
        app:layout_constraintTop_toBottomOf="@id/tv_signupTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--nama-->
            <TextView
                android:id="@+id/tv_Fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_yellow"
                android:textSize="14sp"
                android:text="@string/fullname"
                android:fontFamily="@font/barlow_semibold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_fullname"
                android:layout_width="300dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_Fullname"
                android:layout_marginTop="8dp"
                android:background="@drawable/textfieldbg"
                android:hint="@string/fullname_hint"
                android:textSize="12sp"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/dark_yellow"
                android:paddingStart="12dp"/>

            <!--email-->
            <TextView
                android:id="@+id/tv_emailSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_yellow"
                android:textSize="14sp"
                android:text="@string/email"
                android:fontFamily="@font/barlow_semibold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/tf_fullname"
                android:layout_marginTop="20dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_emailSignup"
                android:layout_width="300dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_emailSignup"
                android:layout_marginTop="8dp"
                android:background="@drawable/textfieldbg"
                android:hint="@string/email_hint"
                android:textSize="12sp"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/dark_yellow"
                android:paddingStart="12dp"/>

            <!--password-->
            <TextView
                android:id="@+id/tv_passwordSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_yellow"
                android:textSize="14sp"
                android:text="@string/password"
                android:fontFamily="@font/barlow_semibold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/tf_emailSignup"
                android:layout_marginTop="20dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_passwordSignup"
                android:layout_width="300dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_passwordSignup"
                android:layout_marginTop="8dp"
                android:background="@drawable/textfieldbg"
                android:hint="@string/password_hint"
                android:textSize="12sp"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/dark_yellow"
                android:paddingStart="12dp"/>
            <ImageView
                android:id="@+id/btn_seePassword"
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:background="@drawable/seen"
                app:layout_constraintTop_toTopOf="@id/tf_passwordSignup"
                app:layout_constraintBottom_toBottomOf="@id/tf_passwordSignup"
                app:layout_constraintEnd_toEndOf="@id/tf_passwordSignup"
                android:layout_marginEnd="12dp"/>
            
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="300dp"
                android:layout_height="46dp"
                app:layout_constraintTop_toBottomOf="@id/tf_passwordSignup"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Daftar"
                android:fontFamily="@font/barlow_semibold"
                android:textSize="14sp"
                android:textAllCaps="false"/>

            <!--link to login-->
            <TextView
                android:id="@+id/tv_linkToLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_signup"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Sudah punya akun? Masuk ke akunmu."
                android:fontFamily="@font/barlow_semibold"
                android:textSize="12sp"
                android:textColor="@color/dark_yellow"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>